--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-
+    <header>
+      <div class="content">
+        <a href="#" class="logo"><img src="./resources/images/lionLogo.svg" alt="logo"></a>
+          <span><strong>COLMAR</strong>ACADEMY</span>
+        <nav class="desktop">
+          <ul>
+            <li><a href="#">On campus</a></li>
+            <li><a href="#">Online</a></li>
+            <li><a href="#">or Company</a></li>
+            <li><a href="#">Sign in</a></li>
+          </ul>
+        </nav>
+        <nav class="mobile">
+          <ul>
+            <li><a href="#"><img src="./resources/images/lionLogo.svg" alt="logo"></a></li>
+            <li><a href="#"><img src="./resources/images/babyChair.svg" alt="chair"></a></li>
+            <li><a href="#"><img src="./resources/images/littlePC.svg" alt="little PC"></a></li>
+            <li><a href="#"><img src="./resources/images/littleGuy.svg" alt="little guy"></a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
   </body>
 </html>
