Complete banner section both html and css responsive

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <!-- header both desktop and mobile-->
     <header>
       <div class="content">
         <a href="#" class="logo"><img src="./resources/images/lionLogo.svg" alt="logo"></a>
@@ -29,5 +30,19 @@
         </nav>
       </div>
     </header>
+    <!--mainContent-->
+
+      <div class="banner">
+        <div class="girls">
+           <img class="pic" src="./resources/images/bookGirls.jpg" alt="Girls">
+        </div>
+        <div class="words">
+          <h1>Learn something</br> new everyday</h1>
+            <p class="span">Lorem ipsum dolor sit amet,</br> consectetur
+             sdipiscing elit.</p>
+            <p><a href="#">Start here</a></p>
+        </div>
+     </div>
+
   </body>
 </html>
