--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <!-- header both desktop and mobile-->
+
     <header>
       <div class="content">
         <a href="#" class="logo"><img src="./resources/images/lionLogo.svg" alt="logo"></a>
@@ -20,7 +21,8 @@
             <li><a href="#">Sign in</a></li>
           </ul>
         </nav>
-        <nav class="mobile">
+
+       <nav class="mobile">
           <ul>
             <li><a href="#"><img src="./resources/images/lionLogo.svg" alt="logo"></a></li>
             <li><a href="#"><img src="./resources/images/babyChair.svg" alt="chair"></a></li>
@@ -30,11 +32,16 @@
         </nav>
       </div>
     </header>
+
+    <div class="box">
+
     <!--mainContent-->
 
       <div class="banner">
-        <div class="girls">
-           <img class="pic" src="./resources/images/bookGirls.jpg" alt="Girls">
+        <div class="girlsContainer">
+          <div class="girls">
+            <img src="./resources/images/bookGirls.jpg" width="60%" height="auto">
+          </div>
         </div>
         <div class="words">
           <h1>Learn something</br> new everyday</h1>
@@ -43,6 +50,168 @@
             <p><a href="#">Start here</a></p>
         </div>
      </div>
+
+     <!--Upper mid section-->
+     <div class="UppermidContainer">
+       <div class="Uppermiddesktop">
+        <div class="trouble">
+          <img><!--<img src="./resources/images/studyGuy.jpg" class="troubleimage"  alt="stugyGuy"/> -->
+        </div>
+         <div class="text">
+           <h2>It doesn't hurt to keep practicing</h2>
+           <p>"Curabitur vitae libero in ipsum porttitor consequat.
+              Aliquam et commodo lectus,</br> nec consequat neque.
+              Sed non accumsan urna. Phasellus sed consequat ex.
+              Etiam</br> eget magna laoreet, efficitur dolor consequat,
+              tristique ligula."</p>
+           <h4>Emanuel, Sr Strategish at Hiring.com</h4>
+         </div>
+         </div>
+
+        <div class="Uppermidside">
+          <div class="container">
+            <div class="img">
+              <img src="./resources/images/brickRoad.jpg" class="clsimg" alt="brickRoad">
+            </div>
+           <div class="writting">
+             <h3>Orientation date</h3>
+             <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
+             <p><a href="#">Read more</a></p>
+           </div>
+         </div>
+         <div class="container">
+           <div class="img">
+             <img src="./resources/images/map.jpg" class="clsimg" alt="map">
+           </div>
+          <div class="writting">
+            <h3>Our campus</h3>
+            <p>Find which campus is close by you</p>
+            <p><a href="#">Read more</a></p>
+          </div>
+        </div>
+        <div id="grey" class="container">
+          <div class="img">
+            <img src="./resources/images/oldGuy.jpg" class="clsimg"  alt="oldGuy">
+          </div>
+         <div class="writting">
+           <h3>Our guest lecture</h3>
+           <p>Join a keynote with Oliver Sack</br>
+           about music in medical treatment</p>
+           <p><a href="#">Read more</a></p>
+         </div>
+       </div>
+     </div>
+   </div>
+
+  <!--  <div class="UppermidMobile">
+     <div class="mobileContainer">
+       <div class="img">
+         <img src="./resources/images/brickRoadMobile.jpg" alt="brick road">
+       </div>
+       <div class="info">
+         <h3>Orientation</h3>
+         <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
+         <p><a>Read more</a></p>
+       </div>
+     </div>
+     <div class="mobileContainer">
+       <div class="img">
+         <img src="./resources/images/map-mobile.jpg" alt="map">
+       </div>
+       <div class="info">
+         <h3>Our campus</h3>
+         <p>Find which campus is close by you</p>
+         <p><a>Read more</a></p>
+       </div>
+     </div>
+     <div class="mobileContainer">
+       <div class="img">
+         <img src="./resources/images/oldGuyMobile.jpg" alt="map">
+       </div>
+       <div class="info">
+         <h3>Special guest lecture</h3>
+         <p>Join a keynote with Oliver Sack about</br>
+            music in medical treatment</p>
+         <p><a>Read more</a></p>
+       </div>
+     </div>
+   </div>  -->
+
+  <div class="learning">
+     <div class="color">
+     <h1>Start learning</h1>
+     <div class="learnContainer">
+       <div class="learnbox">
+         <div class="image1">
+      <!--     <img src="./resources/images/desktops.jpg" class="learnimage" alt="desktops">  -->
+         </div>
+         <div class="para">
+         <p>Software engineering</p>
+         <p>COURSES</p>
+         <p>Web Developement, Mobile</br>
+            Development, iOT, APIs</p>
+          </div>
+       </div>
+       <div class="learnbox">
+         <div class="image2">
+        <!--   <img src="./resources/images/mobile.jpg" class="learnimage" alt="desktops">  -->
+         </div>
+         <div class="para">
+         <p>Computer art</p>
+         <p>COURSES</p>
+         <p>Imaging &amp; Design, Web Design,</br>
+            Motion Graphics &amp; Visual Effects,</br>
+            Computer Animation</p>
+        </div>
+       </div>
+       <div class="learnbox">
+         <div class="image3">
+        <!--   <img src="./resources/images/vintageCamera.jpg" class="learnimage" alt="desktops"> -->
+         </div>
+         <div class="para">
+         <p>Design</p>
+         <p>COURSES</p>
+         <p>User Experience Design, User</br>
+            Research, Visual Design</p>
+        </div>
+       </div>
+       <div class="learnbox">
+         <div class="image4">
+          <!-- <img src="./resources/images/laptop.jpg" class="learnimage" alt="desktops"> -->
+        </div>
+        <div class="para">
+         <p>Data</p>
+         <p>COURSES</p>
+         <p>Data Science, Big Data, SQL, Data</br>
+            Visualization</p>
+        </div>
+       </div>
+       <div class="learnbox">
+         <div class="image5">
+          <!-- <img src="./resources/images/chess.jpg" class="learnimage" alt="desktops"> -->
+        </div>
+        <div class="para">
+         <p>Business</p>
+         <p>COURSES</p>
+         <p>Product Development, Business</br>
+            Development, Startup</p>
+         </div>
+       </div>
+       <div class="learnbox">
+         <div class="image6">
+          <!-- <img src="./resources/images/appleWatch.jpg" class="learnimage" alt="desktops"> -->
+        </div>
+        <div class="para">
+         <h2>Marketing</h2>
+         <h3>COURSES</h3>
+         <p>Analytics, Content Marketing,</br>
+            Mobile Marketing</p>
+         </div>
+       </div>
+     </div>
+   </div>
+ </div>
+
 
   </body>
 </html>
