Complete Desktop version now finish mobile version

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
       <!--     <img src="./resources/images/desktops.jpg" class="learnimage" alt="desktops">  -->
          </div>
          <div class="para">
-         <p>Software engineering</p>
-         <p>COURSES</p>
+         <h3>Software engineering</h3>
+         <h4>COURSES</h4>
          <p>Web Developement, Mobile</br>
             Development, iOT, APIs</p>
           </div>
@@ -157,8 +157,8 @@
         <!--   <img src="./resources/images/mobile.jpg" class="learnimage" alt="desktops">  -->
          </div>
          <div class="para">
-         <p>Computer art</p>
-         <p>COURSES</p>
+         <h3>Computer art</h3>
+         <h4>COURSES</h4>
          <p>Imaging &amp; Design, Web Design,</br>
             Motion Graphics &amp; Visual Effects,</br>
             Computer Animation</p>
@@ -169,8 +169,8 @@
         <!--   <img src="./resources/images/vintageCamera.jpg" class="learnimage" alt="desktops"> -->
          </div>
          <div class="para">
-         <p>Design</p>
-         <p>COURSES</p>
+         <h3>Design</h3>
+         <h4>COURSES</h4>
          <p>User Experience Design, User</br>
             Research, Visual Design</p>
         </div>
@@ -180,8 +180,8 @@
           <!-- <img src="./resources/images/laptop.jpg" class="learnimage" alt="desktops"> -->
         </div>
         <div class="para">
-         <p>Data</p>
-         <p>COURSES</p>
+         <h3>Data</h3>
+         <h4>COURSES</h4>
          <p>Data Science, Big Data, SQL, Data</br>
             Visualization</p>
         </div>
@@ -191,8 +191,8 @@
           <!-- <img src="./resources/images/chess.jpg" class="learnimage" alt="desktops"> -->
         </div>
         <div class="para">
-         <p>Business</p>
-         <p>COURSES</p>
+         <h3>Business</h3>
+         <h4>COURSES</h4>
          <p>Product Development, Business</br>
             Development, Startup</p>
          </div>
@@ -202,14 +202,68 @@
           <!-- <img src="./resources/images/appleWatch.jpg" class="learnimage" alt="desktops"> -->
         </div>
         <div class="para">
-         <h2>Marketing</h2>
-         <h3>COURSES</h3>
+         <h3>Marketing</h3>
+         <h4>COURSES</h4>
          <p>Analytics, Content Marketing,</br>
             Mobile Marketing</p>
          </div>
+        </div>
        </div>
+      </div>
      </div>
-   </div>
+
+  <!--Video thesis-->
+
+     <div class="videoContainer">
+       <h1>Thesis exhibit</h1>
+       <div class="vidContainer">
+        <div class="video">
+          <video width="100%" height="auto" controls>
+            <source src="./resources/video/thesis.mp4" type="video/mp4">
+          </video>
+          <div class="vidTxt">
+          <h2>Reimagine urban</h2>
+          <p>"Curabitur vitae libero in ipsum porttitor consequat.
+             Aliquam et commodo lectus, nec</br>consequat neque.
+             Sed non accumsan urna. Phasellus sed consequat ex.
+             Etiam eget</br>magna laoreet, efficitur dolor
+             consequat, tristique ligula."</p>
+           </div>
+        </div>
+      </div>
+      <div class="videoSidebar">
+        <div class="vidsideContainer">
+          <div class="pictures">
+          <img src="./resources/images/cheatOnTest.jpg" class="picturesvid" alt="paperwork">
+        </div>
+        <div class="txt">
+          <h3>Fisma: Design and</br>Prototype</h3>
+          <p>Designer showcase of new</br>prototype
+           product</p>
+        </div>
+      </div>
+      <div class="vidsideContainer">
+        <div class="pictures">
+        <img src="./resources/images/skyscrapper.jpg" class="picturesvid" alt="building">
+      </div>
+      <div class="txt">
+        <h3>Now and then</h3>
+        <p>Research study about New York</p>
+      </div>
+    </div>
+      </div>
+     </div>
+     <div class="foot">
+       <div class="square">
+       <div class="reserved">
+         <h4>&copy; 2016 Colmar Academy. All rights reserved</h4>
+      </div>
+      <div class="rectangle">
+        <h5>Terms Privacy</h5>
+      </div>
+    </div>
+  </div>
+
  </div>
 
 
