Fix responsive issues

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Capstone</title>
+
+
+    <link rel="icon" href="cookie1.ico" type="image/x-icon">
     <link href="resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
@@ -33,7 +36,7 @@
       </div>
     </header>
 
-    <div class="box">
+
 
     <!--mainContent-->
 
@@ -57,11 +60,15 @@
         <div  class="imgmobile">
           <img src="./resources/images/bookGirls.jpg" class="mob" alt="bookGirls">
         </div>
-        <div class="mobilewords">
+        <div class="mobilewords">                                                        <!--   <span class="mobSpan"><botton onclick="window.location.href='#'"><a href="#">Start here</a></button></span> -->
           <h1 class="mobH1">Learn something</br>new everyday</h1>
           <p class="mobP">Lorem ipsum dolor sit amet,</br>
              consectetur adipiscing elit.</p>
-          <span class="mobSpan"><a href="#">Start here</a></span>
+        <div class="linkmobile">
+          <ul>
+            <li><a href="#">Start here</a></li>
+          </ul>
+        </div>
         </div>
       </div>
 
@@ -164,7 +171,7 @@
           <li><button onclick="window.location.href='#'">Software engineering</button></li>
           <li><button onclick="window.location.href='#'">Computer art</button></li>
           <li><button onclick="window.location.href='#'">Design</button></li>
-          <li><button onclick="window.location.href='#'">Data</button></li>
+          <li><button onclick="window.location.href='#'">Data</button></li>      <!--....................................................-->
           <li><button onclick="window.location.href='#'">Business</button></li>
           <li><button onclick="window.location.href='#'">Marketing</button></li>
         </ul>
@@ -311,7 +318,7 @@
     </div>
   </div>
 
- </div>
+
 
   </body>
 </html>
