--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Capstone</title>
 
 
-    <link rel="icon" href="cookie1.ico" type="image/x-icon">
+    <link rel="icon" href="cookie1transparent_80F_icon.ico." type="image/x-icon">
     <link href="resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
